--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 
-name: 1.1.$(patchno)$(Rev:.r)
+name: $(version)$(Rev:.r)
 
 trigger:
 - master
@@ -14,7 +14,7 @@ pool:
   vmImage: 'ubuntu-16.04'
 
 variables:
-  patchno: 0
+  version: "V"
   buildConfiguration: 'Release'
   dockerId: aksRegistry57
   imageName: aksdemoimage:$(Build.BuildNumber)
