Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ variables:
   version: "V"
   buildConfiguration: 'Release'
   dockerId: aksRegistry57
-  imageName: aksdemoimage:$(Build.BuildNumber)
+  imageName: devopsKubeImage:$(Build.BuildNumber)
   password: /PS1rRCN2PVxspQTaPt53KwClitbjB1Q
 
 #$(Build.BuildNumber)
