--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
   inputs:
     command: publish
     publishWebProjects: false
-    projects: 'aksDemo.csproj'
+    projects: 'devopsSessionKubernetes.csproj'
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: true
 
