Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 
-name: 1.1.$(Rev:.r)
+name: 1.1$(Rev:.r)
 
 trigger:
 - master
